Use ng-cloak to avoid flickering on page load

--- a/tardis/tardis_portal/static/css/default.css
+++ b/tardis/tardis_portal/static/css/default.css
@@ -268,3 +268,12 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     margin-left: 1em;
 }
 /* end search */
+
+/*
+  Allow angular.js to be loaded in body, hiding cloaked elements until
+  templates compile.  The !important is important given that there may be
+  other selectors that are more specific or come later and might alter display.
+ */
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
